# transcriber

./: .dockerignore  .gitignore  LICENSE  README..md  README.md  compose.yaml  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: prod-build.yaml
docs/: api.md
scripts/: download_model.py
src/: main.py
src/static/: index.html
tests/: test_endpoints.py
